k8s/base/authuser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ead-authuser
  namespace: ead
  labels:
    app: ead-authuser
spec:
  selector:
    app: ead-authuser
  ports:
    - protocol: TCP
      port: 8087
      targetPort: 8087
  type: ClusterIP
