k8s/base/config-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ead-config
  namespace: ead
  labels:
    app: ead-config
spec:
  selector:
    app: ead-config
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
