k8s/base/course-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ead-course
  namespace: ead
  labels:
    app: ead-course
spec:
  selector:
    app: ead-course
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
